--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "quiz-app",
 	"version": "0.1.0",
-  "homepage": "https://fadi-hasaba.github.io/game",
+  "homepage": "https://fadi-hasaba.github.io/test",
   "private": true,
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.16.5",
